--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-scroll": "^1.7.14",
     "react-syntax-highlighter": "^11.0.2"
   },
   "scripts": {
