--- a/server/WebSockets/pom.xml
+++ b/server/WebSockets/pom.xml
@@ -60,6 +60,11 @@
         <version>3.141.59</version>
     </dependency>
     <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>1.11.3</version>
+    </dependency>
+    <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
         <version>2.8.6</version>
