--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "https://lsorimoutou.github.io/WebScraping/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "gh-pages": "^2.1.1",
