--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,15 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "bootstrap": "^4.4.1",
     "gh-pages": "^2.1.1",
     "node-sass": "^4.12.0",
     "prismjs": "^1.17.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "react-scroll": "^1.7.14",
     "react-syntax-highlighter": "^11.0.2",
     "reactjs-popup": "^1.5.0"
