--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://lsorimoutou.github.io/WebScraping/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@material-ui/core": "^4.5.1",
@@ -15,6 +16,7 @@
     "prismjs": "^1.17.1",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
