--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lsorimoutou.github.io/WebScraping/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
@@ -29,8 +28,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "fund": "npm fund",
+    "fix": "npm audit fix"
   },
   "eslintConfig": {
     "extends": "react-app"
